tests/functional/data/transpiler/common/errors/loops/bad_structure1.err
bad_structure1.cpp:1:1: error: Incorrect [@outer]/[@inner] loops structure
    1 | @kernel void hello_kern() {
      | ^
